# CoolBox

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DISTRIBUTED_COMPUTING.md  Doxyfile  Makefile  Makefile.bak  NEURAL_NETWORK_TEMPLATES.md  README.md  TEMPLATES_QUICK_REFERENCE.md
_binaries/abbs/system/: CMakeLists.txt
_binaries/apps/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  matlab_platform_app.cpp  matlab_platform_app.txt
_binaries/apps/__rej_server_launch/: CMakeLists.txt  service_manager.cpp
_binaries/apps/__rej_url_shortener/: CMakeLists.txt  url_shortener.cpp
_binaries/apps/app_service_manager/: CMakeLists.txt  service_manager.cpp
_binaries/apps/matlab_platform_app/: matlab_platform_app.cpp
_binaries/apps/server_launch/: Makefile  cmake_install.cmake
_binaries/apps/service_breaker/: service_breaker.cpp
_binaries/apps/service_manager/: Makefile  cmake_install.cmake  service_manager.cpp
_binaries/examples/: CMakeLists.txt  Makefile  extract_metadata_example.cpp  library_metadata_example.cpp  time_series_example.py.bak  training_visualization.py.bak2  training_visualization.py.bak3  training_visualization.py.bak4
_binaries/examples/cpp/: Makefile
_binaries/services/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  account_service  account_service.cpp  cmake_install.cmake  metrics_backend_service.cpp
_binaries/services/__rej_proxy_service/: CMakeLists.txt
_binaries/services/__rej_system_monitor/: CMakeLists.txt
_binaries/services/proxy_service/: Makefile  cmake_install.cmake
_binaries/services/service_account/: CMakeLists.txt
_binaries/services/service_cache/: CMakeLists.txt
_binaries/services/service_dns/: CMakeLists.txt
_binaries/services/service_mail_server/: CMakeLists.txt
_binaries/services/service_proxy/: CMakeLists.txt
_binaries/services/system_monitor/: Makefile  cmake_install.cmake
_libraries/: CMakeLists.txt
_libraries/backages/MISC/: CMakeLists.txt
_libraries/emscripten_bindings/: CMakeLists.txt  advanced_logging_bindings.cpp  advanced_logging_bindings.js.example  battery_bindings.cpp  curcuitry_bindings.cpp
_libraries/gen_docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Doxyfile_auth  Doxyfile_data_structures  Doxyfile_databases  Doxyfile_databases_sql  Doxyfile_dataformats  Doxyfile_dataformats_json  Doxyfile_ml  Doxyfile_ml_bayesian_network  Doxyfile_ml_computer_vision  Doxyfile_ml_decision_tree  Doxyfile_ml_deep_learning  Doxyfile_ml_dimensionality_reduction  Doxyfile_ml_distribution  Doxyfile_ml_generalized_linear_model  Doxyfile_ml_hidden_markov_model  Doxyfile_ml_latent_sentiment_analysis  Doxyfile_ml_marked_point_process  Doxyfile_ml_multi_arm_bandit  Doxyfile_ml_nlp  Doxyfile_ml_server  Doxyfile_ml_support_vector_machine  Doxyfile_ml_time_series  Doxyfile_ml_tracker  Doxyfile_networking  Doxyfile_networking_distributed  Doxyfile_networking_html  Doxyfile_networking_rest_api  Doxyfile_security  Doxyfile_security_fuzzer  Doxyfile_security_network_scanner  Doxyfile_services  Doxyfile_services_cache_server  Doxyfile_services_distributed_fs  Doxyfile_services_dns  Doxyfile_services_mail_server  Doxyfile_services_proxy  Doxyfile_services_server_launch  (+8 more)
_libraries/include/advanced_logging/: advanced_logging.h
_libraries/include/data_structures/: splay_tree.h
_libraries/include/system/: host_scanner.h
_libraries/python_bindings/: CMakeLists.txt  MANIFEST.in  py_ml_core.cpp  setup.py
_libraries/python_bindings/electronics/: py_battery.cpp  py_curcuitry.cpp
_libraries/python_bindings/examples/: cv_cnn_example.py  cv_transforms_example.py
_libraries/python_bindings/fuzzer/: CMakeLists.txt  fuzzer_bindings.cpp
_libraries/python_bindings/http/: CMakeLists.txt  http_bindings.cpp
_libraries/python_bindings/ml_toolbox/: __init__.py
_libraries/src/: CMakeLists.txt
_libraries/src/advanced_logging/: advanced_logging.cpp
_libraries/src/auth/: auth_system.cpp
_libraries/src/data_structures/: CMakeLists.txt  binary_search_tree.cpp  concurrent_hash_map.cpp  concurrent_linked_list.cpp  hash_map.cpp
_libraries/src/deep_learning/: templates.cpp
_libraries/src/file_system/: file_watcher.cpp
_libraries/src/ml/: CMakeLists.txt
_libraries/src/ml_server/: ml_server.cpp
_libraries/src/networking/: CMakeLists.txt
_libraries/src/rest_api/: server.cpp
_libraries/src/security/: CMakeLists.txt
_libraries/src/services/: CMakeLists.txt
_libraries/src/utils/: system_stats.cpp
_test/: CMakeLists.txt
_test/datastructures/: CMakeLists.txt
_test/http_server/: test_http_server.cpp
_test/ml/: CMakeLists.txt
_test/networking/: CMakeLists.txt
_test/servlets/: CMakeLists.txt  test_servlet_classes.cpp  test_servlets.cpp
_test/utils/: CMakeLists.txt
binaries/demos/: CMakeLists.txt
gen_docs/: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  SHARED_LIBRARIES_USAGE.md
libraries/src/services/: CMakeLists.txt
python_bindings/: QUICK_INSTALL.md  install.sh  py_ml_core.cpp  pyproject.toml  setup.py
python_bindings/include/deep_learning/: neural_network.h
python_bindings/include/distributed/: message_passing.h
python_bindings/include/nlp/: text_processor.h
python_bindings/src/computer_vision/: layers.cpp
python_bindings/src/dimensionality_reduction/: knn.cpp  pca.cpp
python_bindings/src/distributed/: message_passing.cpp
services/: CMakeLists.txt  README.md  account_service.cpp  metrics_backend_service.cpp
src/: CMakeLists.txt
src/auth/: CMakeLists.txt  auth_system.cpp
src/computer_vision/: CMakeLists.txt  image.cpp  pipeline.cpp  transforms.cpp
src/data_structures/: concurrent_hash_map.cpp  hash_map.cpp  linked_list.cpp
src/deep_learning/: CMakeLists.txt  layer.cpp  loss.cpp  neural_network.cpp  optimizer.cpp  templates.cpp  tensor.cpp
src/distributed/: distributed_trainer.cpp
src/ml_server/: CMakeLists.txt
src/nlp/: embeddings.cpp  text_processor.cpp
src/rest_api/: server.cpp
src/security/: CMakeLists.txt
src/services/: CMakeLists.txt
src/system/: host_scanner.cpp
src/time_series/: time_series.cpp
(+587 files in other folders)
